# yt-aperture

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  yss
.claude/agents/: youtube-video-analyst.md  youtube-video-explorer.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/config/: settings.py
src/core/: __init__.py  cache.py  extractor.py  processor.py  searcher.py
src/utils/: helpers.py
tests/: __init__.py  test_processor.py
